--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 body {
     font-family: sans-serif;
     margin: 20px;
-    background-color: #f4f4f4;
+    background-color: #333;
 }
 
 h1, h2 {
-    color: #333;
+    color: #f4f4f4;
 }
 
 a {
-    color: #007bff;
+    color:#333;
     text-decoration: none;
 }
 
