--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body {
     font-family: sans-serif;
     margin: 200px;
-    background-color: #333;
+    background-color: #000000;
 }
 
 h1, h2 {
-    color: #f4f4f4;
+    color: #ffffff;
 }
 
 a {
