--- a/style.css
+++ b/style.css
@@ -19,4 +19,10 @@ a {
     padding: 10px 300px;
 }
 
+b {
+    color: #a7bde8;
+    padding: 10px 300px;
+}
+
+
 /* You can apply different padding to other elements as well */
